kustomize/auth/prod/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: bitnami/oauth2-proxy:7.9.0
          args:
            - --http-address=0.0.0.0:4180
            - --provider=oidc
            - --provider-display-name=Auth0
            - --skip-provider-button=true
            - --oidc-issuer-url=https://dev-hoo0x1gbvzrm2jd2.uk.auth0.com/
            - --client-id=mdG9zZuix9tsZnGWnqdQ2PlzvLBUZsPW
            - --client-secret=$(CLIENT_SECRET)
            - --skip-jwt-bearer-tokens=true
            - --set-xauthrequest=true
            - --cookie-name=ausibay
            - --cookie-secret=$(COOKIE_SECRET)
            - --cookie-secure=true
            - --cookie-domain=austinbayley.co.uk
            - --email-domain=*
            - --reverse-proxy=true
            - --real-client-ip-header=X-Forwarded-For
            - --upstream="static://200"
            - --resource=https://austinbayley.co.uk
            - --scope=openid profile email
            - --oidc-groups-claim=https://austinbayley.co.uk/groups
          ports:
            - name: http
              containerPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      targetPort: 4180
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-activity-ext-auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: prod-activity
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: prod-activity
  to:
    - group: ""
      kind: Service
      name: oauth2-proxy
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-queue-ext-auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: prod-queue
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: prod-queue
  to:
    - group: ""
      kind: Service
      name: oauth2-proxy
